# lzf-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  deploy.sh  index.html  search-index.js
.github/workflows/: tests.yml
benches/: bench_basic.rs
examples/: cli.rs  compare.rs  compress.rs  decompress.rs  lorem.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
lzf/: Makefile  enum.LzfError.html  fn.compress.html  fn.decompress.html  index.html  sidebar-items.js  type.LzfResult.html
lzf/compress/: fn.compress.html  sidebar-items.js
lzf/decompress/: fn.decompress.html  sidebar-items.js
quickcheck/: Cargo.toml  build.rs
quickcheck/src/: lib.rs
src/: compress.rs  decompress.rs  lib.rs  native.rs  native_compress.rs
src/lzf/: compress.rs.html  decompress.rs.html  lib.rs  lib.rs.html  lzf.rs
