[package]
name = "lzf"
version = "0.3.1"
authors = ["Jan-Erik Rediger <badboy@fnordig.de>"]
keywords = ["compression"]
description = "An implementation of LZF, a very small data compression algorithm"
homepage = "https://github.com/badboy/lzf-rs"
repository = "https://github.com/badboy/lzf-rs"
documentation = "https://docs.rs/lzf/"
license = "BSD-3-Clause"
readme = "README.md"

include = [
  "README.md",
  "LICENSE",
  "Cargo.toml",
  "src/**/*",
  "benches/**/*",
  "examples/**/*"
]

[dependencies]
clippy = {version = "*", optional = true}

[dev-dependencies]
quickcheck = "0.2"

[features]
default = []
