[package]
name = "lzf"
version = "0.3.2"
authors = ["Jan-Erik Rediger <badboy@fnordig.de>"]
keywords = ["compression"]
description = "An implementation of LZF, a very small data compression algorithm"
homepage = "https://github.com/badboy/lzf-rs"
repository = "https://github.com/badboy/lzf-rs"
documentation = "https://docs.rs/lzf/"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2021"

include = [
  "README.md",
  "LICENSE",
  "Cargo.toml",
  "src/**/*",
  "benches/**/*",
  "examples/**/*"
]

[lib]
bench = false

[dev-dependencies]
quickcheck = "1.0"
criterion = "0.4"

[[bench]]
name = "bench_basic"
harness = false

[features]
default = []
