[package]
name = "lzf-qc"
version = "0.0.1"
authors = ["Jan-Erik Rediger <badboy@fnordig.de>"]
description = "Compare lzf-rs to native C library"
license = "BSD-3-Clause"
edition = "2021"

build = "build.rs"

[dependencies]
quickcheck = "1.0"
libc = "0.2"
lzf = {path = ".."}

[build-dependencies]
cc = "1.0"
